generator client {
    provider = "prisma-client-js"
}

// generator dbml {
//     provider = "prisma-dbml-generator"
// }

datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

model User {
    id          String       @id @default(uuid())
    password    String
    email       String       @unique
    collections Collection[]
    links       Link[]
}

model Link {
    id            String      @id @default(uuid())
    url           String
    short_url     String      @unique
    collection    Collection  @relation(fields: [collection_id], references: [id])
    collection_id String
    user          User        @relation(fields: [user_id], references: [id])
    user_id       String
    Analytics     Analytics[]
}

model Collection {
    id      String @id @default(uuid())
    name    String
    user    User   @relation(fields: [user_id], references: [id])
    user_id String
    links   Link[]

    @@unique([name, user_id])
}

model Analytics {
    id          String  @id @default(uuid())
    referer     String
    path        String
    ip          String
    browser     String
    browserLang String
    os          String
    osVer       String
    device      String
    deviceModel String
    deviceType  String
    countryCode String
    countryName String
    Link        Link?   @relation(fields: [linkId], references: [id])
    linkId      String?
}
